--- a/root/dev_inc/scss/common/_base_pc.scss
+++ b/root/dev_inc/scss/common/_base_pc.scss
@@ -89,4 +89,15 @@ filter: alpha(opacity=0);}
 .h3  { font-size:16px; color:#333333; font-weight:500; letter-spacing: -0.5px; text-align:left; background-color:transparent; }
 .text-muted     { font-size:14px; color:#b1b1b1; font-weight: 300;  line-height: 1.43;  letter-spacing: -0.4px; }
 .text-warning   { font-family: Dotum; font-size:12px; color:#999999;  line-height: 1.33; letter-spacing: -0.4px;  }
-	
+
+/* 한줄 말줄임 */
+.ellipsis{
+    width: 300px;
+    @include ellipsis();
+}
+/* 여러줄 말줄임 */
+.ellipsis-3{
+    width: 300px;
+    @include ellipsis-line(3);
+}
+
